--- a/Planets.html
+++ b/Planets.html
@@ -65,35 +65,47 @@
       <div class="container text-center">
         <div class="row justify-content-md-center">
           <div class="col-md-auto">
-            <a href="./Earth.html"><img src="./images/earth.png" /></a>
+            <a href="./Earth.html"><img src="./images/earth.png" /> </a> <br />
+            <h3>Earth</h3>
           </div>
           <div class="col-md-auto">
-            <a href="./Jupiter.html"><img src="./images/jupiter.png" /></a>
+            <a href="./Jupiter.html"><img src="./images/jupiter.png" /></a
+            ><br />
+            <h3>Jupiter</h3>
           </div>
           <div class="col-md-auto">
-            <a href="./Mars.html"><img src="./images/mars.png" /></a>
-          </div>
-        </div>
-        <div class="row justify-content-md-center">
-          <div class="col-md-auto">
-            <a href="./Mercury.html"><img src="./images/mercury.png" /></a>
-          </div>
-          <div class="col-md-auto">
-            <a href="./Moon.html"><img src="./images/moon.png" /></a>
-          </div>
-          <div class="col-md-auto">
-            <a href="./Neptune.html"><img src="./images/neptune.png" /></a>
+            <a href="./Mars.html"><img src="./images/mars.png" /></a><br />
+            <h3>Mars</h3>
           </div>
         </div>
         <div class="row justify-content-md-center">
           <div class="col-md-auto">
-            <a href="./Saturn.html"><img src="./images/saturn.png" /></a>
+            <a href="./Mercury.html"><img src="./images/mercury.png" /></a
+            ><br />
+            <h3>Mercury</h3>
           </div>
           <div class="col-md-auto">
-            <a href="./Uranus.html"><img src="./images/uranus.png" /></a>
+            <a href="./Moon.html"><img src="./images/moon.png" /></a><br />
+            <h3>Moon</h3>
           </div>
           <div class="col-md-auto">
-            <a href="./Venus.html"><img src="./images/venus.png" /></a>
+            <a href="./Neptune.html"><img src="./images/neptune.png" /></a
+            ><br />
+            <h3>Neptune</h3>
+          </div>
+        </div>
+        <div class="row justify-content-md-center">
+          <div class="col-md-auto">
+            <a href="./Saturn.html"><img src="./images/saturn.png" /></a><br />
+            <h3>Saturn</h3>
+          </div>
+          <div class="col-md-auto">
+            <a href="./Uranus.html"><img src="./images/uranus.png" /></a><br />
+            <h3>Uranus</h3>
+          </div>
+          <div class="col-md-auto">
+            <a href="./Venus.html"><img src="./images/venus.png" /></a><br />
+            <h3>Venus</h3>
           </div>
         </div>
         <div class="row justify-content-md-center">
@@ -101,7 +113,8 @@
             <a href="#"></a>
           </div>
           <div class="col-md-auto">
-            <a href="./Sun.html"><img src="./images/sun.png" /></a>
+            <a href="./Sun.html"><img src="./images/sun.png" /></a><br />
+            <h3>Sun</h3>
           </div>
           <div class="col-md-auto">
             <a href="#"></a>
@@ -111,20 +124,21 @@
 
       <br />
 
-      <h3 class="title">Honarable Mention</h3>
+      <section><h3>Honarable Mention</h3></section>
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <a href="#"></a>
         </div>
         <div class="col-md-auto">
-          <a href="./Pluto.html"><img src="./images/pluto.png" /></a>
+          <a href="./Pluto.html"><img src="./images/pluto.png" /></a> <br />
+          <h3>Pluto</h3>
         </div>
         <div class="col-md-auto">
           <a href="#"></a>
         </div>
       </div>
 
-      <h3 class="title">Solar System</h3>
+      <section><h3>Solar System</h3></section>
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <a href="#"></a>
