--- a/Planets.html
+++ b/Planets.html
@@ -14,6 +14,14 @@
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@200&family=Playfair+Display:wght@700&family=Poppins:wght@500;700&family=Roboto:wght@300&family=Yeseva+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./Planets.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -138,7 +146,7 @@
         </div>
       </div>
 
-      <section><h3>Solar System</h3></section>
+      <section><h3>The Solar System</h3></section>
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <a href="#"></a>
