Added GitHub link

--- a/Planets.html
+++ b/Planets.html
@@ -166,7 +166,9 @@
         <a href="https://www.linkedin.com/in/shermika-daniels-70093b139"
           >Shermika Daniels</a
         >
-        open-sourced on <a href="#">GitHub</a> and hosted on
+        open-sourced on
+        <a href="https://github.com/ShermikaDaniels/Planets">GitHub</a> and
+        hosted on
         <a href="#">Netlify</a>
       </footer>
     </div>
