--- a/Earth.html
+++ b/Earth.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./Planets.html">Planets</a>
+        <a class="navbar-brand" href="./index.html">Planets</a>
         <button
           class="navbar-toggler"
           type="button"
