Added a paragraph in Earth.html

--- a/Earth.html
+++ b/Earth.html
@@ -14,7 +14,7 @@
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./Earth.css" />
+    <link rel="stylesheet" href="./styles/Earth.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Earth</title>
@@ -61,7 +61,13 @@
 
     <section>
       <h1>Earth</h1>
-      <p>the third rock from the sun</p>
+      <p>
+        Is the planet we inhabit. It is the third planet from the sun. Earth was
+        formed approximately 4.6 billion years ago and made mostly of water.
+        <div class="button">
+        <a href="https://climate.nasa.gov/news/2469/10-interesting-things-about-earth/" target="_blank"><button>Learn more</button></a>
+        </div>
+      </p>
     </section>
   </body>
 </html>
