--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@200&family=Playfair+Display:wght@700&family=Poppins:wght@500;700&family=Roboto:wght@300&family=Yeseva+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./Planets.css" />
+    <link rel="stylesheet" href="./styles/Planets.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
