Added paragraphs for each planet html

--- a/Earth.html
+++ b/Earth.html
@@ -62,8 +62,7 @@
     <section>
       <h1>Earth</h1>
       <p>
-        Is the planet we inhabit. It is the third planet from the sun. Earth was
-        formed approximately 4.6 billion years ago and made mostly of water.
+      Is the planet we inhabit and is the third planet from the Sun. Earth was formed approximately 4.6 billion years ago and is made mostly of water. Earth is the only planet that currently contains life. 
         <div class="button">
         <a href="https://climate.nasa.gov/news/2469/10-interesting-things-about-earth/" target="_blank"><button>Learn more</button></a>
         </div>
