--- a/Jupiter.html
+++ b/Jupiter.html
@@ -61,7 +61,13 @@
 
     <section>
       <h1>Jupiter</h1>
-      <p>Info. Here</p>
+      <p>
+        Jupiter is the 5th planet from the Sun and the biggest planet in the
+        solar system. Jupiter also has rings and 80 moons. Jupiter is made
+        mostly of the gasses hydrogen and helium. A day on Jupiter consists of
+        10 hours versus our 24 and a year for Jupiter is the same as 11.8 Earth
+        years.
+      </p>
     </section>
   </body>
 </html>
