--- a/Mars.html
+++ b/Mars.html
@@ -61,7 +61,15 @@
 
     <section>
       <h1>Mars</h1>
-      <p>Fun facts here</p>
+      <p>
+        Mars is between Earth and Jupiter making it the fourth planet from the
+        Sun. Mars is known as “The Red Planet”, it is red because its surface
+        contains iron. A year on Mars is 687 Earth days. What makes a year for a
+        planet is how long it takes to make a trip around the Sun, for Earth, it
+        takes 365 days. Mars has 4 seasons, polar ice caps, volcanoes, canyons,
+        and weather like Earth. Mars is about half the size of Earth, it is the
+        second smallest planet in the Solar System.
+      </p>
     </section>
   </body>
 </html>
