--- a/Mercury.html
+++ b/Mercury.html
@@ -61,7 +61,12 @@
 
     <section>
       <h1>Mercury</h1>
-      <p>Fun facts here</p>
+      <p>
+        Mercury is the closest planet to the Sun and the second hottest planet
+        in the Solar System it is also the smallest. Mercury is a rocky planet
+        and has a crater named after Dr.Suess. A day on Mercury is 59 Earth days
+        and a year is 88 Earth days.
+      </p>
     </section>
   </body>
 </html>
