--- a/Moon.html
+++ b/Moon.html
@@ -61,7 +61,15 @@
 
     <section>
       <h1>Moon</h1>
-      <p>Fun facts here</p>
+      <p>
+        The Moon is not a planet but Earth&#39; s only natural satellite. A
+        satellite is an object that orbits another object. It takes 27.3 days
+        for the Moon to travel around the Earth. The Moon is a lot smaller than
+        the Sun. The Moon also controls the tides here on Earth, The Moon and
+        Earth exert a gravitational pull on each other. This gravitational pull
+        causes the waves we see when we are at the beach. There is also water on
+        the Moon, it is in the form of ice trapped on the Moon's surface.
+      </p>
     </section>
   </body>
 </html>
