--- a/Neptune.html
+++ b/Neptune.html
@@ -61,7 +61,15 @@
 
     <section>
       <h1>Neptune</h1>
-      <p>Fun facts here</p>
+      <p>
+        Neptune is the 7th planet from the Sun, in the past it was the 2nd to
+        last plant when Pluto was still a plant but now Pluto is considered a
+        Dwarf planet. A year on Neptune is 164.81 Earth years because it is so
+        far from the Sun that it takes a long time to orbit around it. Neptune
+        is known as an “Ice Giant” because it is made up of dense icy materials,
+        water, methane, and ammonia. Neptune also has at least 5 rings and 14
+        known moons and its largest moon is Triton.
+      </p>
     </section>
   </body>
 </html>
