--- a/Pluto.html
+++ b/Pluto.html
@@ -61,7 +61,15 @@
 
     <section>
       <h1>Pluto</h1>
-      <p>Fun facts here</p>
+      <p>
+        Pluto is no longer a planet and has been re-categorized as a Dwarf
+        Planet. Pluto was considered a planet until 2006. Pluto is smaller than
+        the moon and there are white mountains on its surface, but the white
+        caps are not made of snow but methane frost. A year on Pluto is 248
+        Earth years and a day is 153 hours which is about 6 days. Pluto also has
+        5 Moons and it is a very cold planet because of its distance from the
+        Sun.
+      </p>
     </section>
   </body>
 </html>
