--- a/SolarSystem.html
+++ b/SolarSystem.html
@@ -61,7 +61,13 @@
 
     <section>
       <h1>The Solar System</h1>
-      <p>Fun facts here</p>
+      <p>
+        The Solar System has 8 planets it includes Earth, Mercury, Venus, Mars,
+        Jupiter, Saturn, Uranus, and Neptune, as well as the dwarf planet Pluto.
+        The Solar System is part of the Milky Way, there are at least 250 to 500
+        billion stars in our Milky Way galaxy. There are also, currently, 181
+        moons in the Solar System.
+      </p>
     </section>
   </body>
 </html>
