--- a/Sun.html
+++ b/Sun.html
@@ -61,7 +61,16 @@
 
     <section>
       <h1>Sun</h1>
-      <p>Fun facts here</p>
+      <p>
+        The Sun is not a planet but a Star and is over 4.5 billion years old.
+        Many ancient civilizations thought the Sun was a god. The surface of the
+        sun is 5,505°C which is 9941°F. Sometimes gases on the Sun&#39;s surface
+        erupt, shooting far into space, these are called solar flares. The
+        Sun&#39;s light reaches the Earth in 8 minutes. All the planets in the
+        Solar System orbit the Sun. The Sun is made from Hydrogen and Helium.
+        The Sun is the largest object in our Solar System but its size is
+        average compared to other stars.
+      </p>
     </section>
   </body>
 </html>
