--- a/Uranus.html
+++ b/Uranus.html
@@ -61,7 +61,18 @@
 
     <section>
       <h1>Uranus</h1>
-      <p>Fun facts here</p>
+      <p>
+        Uranus is the 7th planet from the Sun. It was the first planet
+        discovered through a telescope, other planets can be seen in the night
+        sky without a telescope, but Uranus cannot. It was discovered in 1781
+        but was originally thought to be a comet or a Star by the astronomer who
+        discovered it. Uranus is a large planet and can fit 63 Earth inside of
+        it. It is also an “Ice Giant” because it is made up of dense icy
+        materials, like water, methane, and ammonia. Uranus has 13 rings, the
+        inner rings are dark and grey and the outer rings are blue and red.
+        Uranus has 27 known moons. A day on Saturn is 17 hours and a year is 84
+        Earth years.
+      </p>
     </section>
   </body>
 </html>
