--- a/Venus.html
+++ b/Venus.html
@@ -61,7 +61,15 @@
 
     <section>
       <h1>Venus</h1>
-      <p>Fun facts here</p>
+      <p>
+        Venus is the second closes planet to the Sun, and it is the hottest
+        planet in the Solar System. Even though Mercury is the planet closest to
+        the Sun it is not as hot as Venus. Venus also has a thick, toxic
+        atmosphere filled with carbon dioxide and covered in thick, yellowish
+        clouds of sulphuric acid and trapped heat. The pressure on Venus would
+        crush you and it is the only planet in our Solar System that rotates
+        clockwise. A day on Venus is 243 Earth days and a year is 244.7 days.
+      </p>
     </section>
   </body>
 </html>
