--- a/Mars.html
+++ b/Mars.html
@@ -20,7 +20,7 @@
     <title>Mars</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">Planets</a>
         <button
