--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <title>Planets</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">Planets</a>
         <button
