--- a/Mercury.html
+++ b/Mercury.html
@@ -22,7 +22,7 @@
   <body>
     <nav class="navbar navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Planets</a>
+        <a class="navbar-brand" href="./index.html">Home</a>
         <button
           class="navbar-toggler"
           type="button"
