--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
   <body>
     <nav class="navbar navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="./index.html">Planets</a>
+        <a class="navbar-brand" href="./index.html"
+          >Welcome, let's learn more about the Solar System!</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -69,7 +71,7 @@
 
     <div class="container">
       <h1 class="title">Planets</h1>
-
+      <p class="intro">Click a planet image to learn more about them!</p>
       <div class="container text-center">
         <div class="row justify-content-md-center">
           <div class="col-md-auto">
