Added a Netlify link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         open-sourced on
         <a href="https://github.com/ShermikaDaniels/Planets">GitHub</a> and
         hosted on
-        <a href="#">Netlify</a>
+        <a href="https://resplendent-torte-d715d1.netlify.app/">Netlify</a>
       </footer>
     </div>
   </body>
