compacted the style.css and made project responsive

--- a/Moon.html
+++ b/Moon.html
@@ -14,12 +14,12 @@
       integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./styles/Moon.css" />
+    <link rel="stylesheet" href="./styles/planets.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moon</title>
   </head>
-  <body>
+  <body class="moon">
     <nav class="navbar navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="./index.html">Home</a>
