--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@200&family=Playfair+Display:wght@700&family=Poppins:wght@500;700&family=Roboto:wght@300&family=Yeseva+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles/Planets.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -137,41 +137,36 @@
       <section><h3>Honarable Mention</h3></section>
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <a href="#"></a>
-        </div>
-        <div class="col-md-auto">
-          <a href="./Pluto.html"><img src="./images/pluto.png" /></a> <br />
+          <a href="./Pluto.html"><img src="./images/pluto.png" /></a>
+          <br />
           <h3>Pluto</h3>
-        </div>
-        <div class="col-md-auto">
-          <a href="#"></a>
         </div>
       </div>
 
       <section><h3>The Solar System</h3></section>
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
-          <a href="#"></a>
-        </div>
-        <div class="col-md-auto">
           <a href="./SolarSystem.html"
             ><img src="./images/solar-system.png"
           /></a>
-        </div>
-        <div class="col-md-auto">
-          <a href="#"></a>
         </div>
       </div>
 
       <footer>
         Coded by
-        <a href="https://www.linkedin.com/in/shermika-daniels-70093b139"
+        <a
+          href="https://www.linkedin.com/in/shermika-daniels-70093b139"
+          target="_blank"
           >Shermika Daniels</a
         >
         open-sourced on
-        <a href="https://github.com/ShermikaDaniels/Planets">GitHub</a> and
-        hosted on
-        <a href="https://resplendent-torte-d715d1.netlify.app/">Netlify</a>
+        <a href="https://github.com/ShermikaDaniels/Planets" target="_blank"
+          >GitHub</a
+        >
+        and hosted on
+        <a href="https://resplendent-torte-d715d1.netlify.app/" target="_blank"
+          >Netlify</a
+        >
       </footer>
     </div>
   </body>
