--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
       <br />
 
-      <section><h3>Honarable Mention</h3></section>
+      <section><h3>Honorable Mention</h3></section>
       <div class="row justify-content-md-center">
         <div class="col-md-auto">
           <a href="./Pluto.html"><img src="./images/pluto.png" /></a>
